Navbar form and tweet model created

--- a/chiyaguff/tweet/templates/index.html
+++ b/chiyaguff/tweet/templates/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    test template
-</body>
-</html>
+{% extends "layout.html" %}
+
+{% block title %}
+Chiyaguff | Tweet
+{% endblock %}
+
+{% block content %}
+
+<h1 class="text-center p-2 bg-cyan-900 text-xl text-white">Welcome . Tato chya lera aam , meetho guff eta xa.</h1>
+
+{% endblock %}
