--- a/chiyaguff/templates/layout.html
+++ b/chiyaguff/templates/layout.html
@@ -19,12 +19,31 @@
 
 <nav class="bg-white dark:bg-gray-900 w-full border-b border-gray-200 dark:border-gray-600">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-    <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
+    <a href="{% url 'tweet_list' %}" class="flex items-center space-x-3 rtl:space-x-reverse">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS6kdhfdLhx0q9KlUIZKdEoqSWHSS1MrJbKqQ&s" class="h-8 mix-blend-multiply" alt="Flowbite Logo">
         <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">ChiyaGuff</span>
     </a>
-    <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
-        <button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Get started</button>
+    <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse gap-2">
+      <!-- Login/logout button  -->
+       {% if user.is_authenticated %}
+        <form action="{% url 'logout' %}" method="post">
+          {% csrf_token %}
+          <button class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="submit">Logout</button>
+        </form>
+
+        {% else %}
+        <form action="{% url 'login' %}" method="post">
+          {% csrf_token %}
+          <button class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="submit">Login</button>
+        </form>
+
+        <form action="{% url 'register' %}" method="post">
+          {% csrf_token %}
+          <button class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="submit">Register</button>
+        </form>
+        {% endif %}
+
+
         <button data-collapse-toggle="navbar-sticky" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-sticky" aria-expanded="false">
           <span class="sr-only">Open main menu</span>
           <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
@@ -50,6 +69,7 @@
     </div>
     </div>
   </nav>
+  
 
   <!-- Navbar ends  -->
     {% block content %}
